--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,158 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,600&display=swap');
+*{
+  box-sizing: border-box;
+  margin: 0;
+}
 .App {
-  text-align: center;
+  background: #E5E5E5;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #4A4A4A;
+  padding-bottom: 120px;
 }
+.app-wrapper{
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  max-width: 754px;
+  margin: 0 auto 20px auto;
   display: flex;
   flex-direction: column;
+}
+.header{
+
+  padding: 50px 0;
+  text-align: center;
+}
+.main{
+  /*flex: 1 1 auto;*/
+  display: grid;
+  grid-template-areas:
+"sidebar filter"
+"sidebar tickets";
+}
+.dummi{
+  grid-area: sidebar;
+}
+.sidebar{
+
+  font-size: 13px;
+  padding: 20px;
+  width: 232px;
+  background: #ffffff;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  border-radius: 5px;
+  margin-right: 20px;
+}
+.sidebar h3{
+  margin-bottom: 20px;
+  font-size: 12px;
+  letter-spacing: 0.5px;
+}
+.sidebar form{
+  font-weight: 400;
+  text-transform: none;
+  margin: 0 -20px;
+  user-select: none;
+}
+.sidebar label{
+  position: relative;
+  cursor: pointer;
+  display:block;
+  padding: 10px 20px 10px 50px;
+}
+.sidebar label:hover{
+  background: #f1fcff;
+}
+.visually-hidden{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.checker{
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  margin-left: -30px;
+  background-image: url("./asserts/checker-off.svg");
+}
+.input:checked + .checker{
+  background-image: url("./asserts/checker-on.svg");
+}
+
+
+.filter2{
+  grid-area: filter;
+  min-width: 502px;
+  display: flex;
+  height: 50px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: #ffffff;
+  margin-bottom: 20px;
 }
-
-.App-link {
-  color: #61dafb;
+.filter2_element {
+  background-color: #ffffff;
+  border: 1px solid #dfe5ec;
+  line-height: 50px;
+  width: 50%;
+  text-align: center;
+  user-select: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.filter2_element:hover{
+  background: #2196f3;
+  border: 0;
+  color: #ffffff;
+}
+.filter2_low-price{
+  border-right: 0;
+  border-radius: 5px 0 0 5px;
+}
+.filter2_faster{
+  border-left: 0;
+  border-radius: 0 5px 5px 0;
+}
+.tickets{
+  grid-area: tickets;
+}
+.ticket{
+  background: #ffffff;
+  box-shadow: 0px 2px 8px rgba(0,0,0,0.1);
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 20px;
+}
+.ticket:last-child{
+  margin-bottom: 0px;
+}
+.ticket_header{
+  display: flex;
+  justify-content: space-between;
+}
+.ticket_price{
+  color: #2196f3;
+  font-size: 24px;
+  padding-top: 6px;
+}
+.ticket_logo{
+  width: 140px;
+}
+.ticket_data{
+  display: flex;
+  margin-bottom: 10px;
+  justify-content: space-between;
+}
+.ticket_data-item:last-child{
+  width: 140px;
+}
+.ticket_data-item_grey{
+  color: #a0b0b9;
+}
+.ticket_data:last-child{
+  margin-bottom: 0px;
 }
